# OrbitXfer

./: .gitignore  LICENSE  README.md  RELEASES.md
.github/workflows/: build.yml
OrbitXfer-iroh-cli/: Cargo.toml  README.md
OrbitXfer-iroh-cli/src/: main.rs
OrbitXfer-iroh-gui/: .gitignore  README.md  electron-builder.env.example  package-lock.json  package.json
OrbitXfer-iroh-gui/assets/: icon.icns
OrbitXfer-iroh-gui/scripts/: sync-cli.js  verify-macos-release.sh
OrbitXfer-iroh-gui/src/: index.html  main.js  renderer.js
docs/: macos-signing-notarization.md
scripts/: new-release.sh  rollback-to-version.sh
